# NLTrader

./: .env.example  .gitignore  DECISIONS-AT-A-GLANCE.md  README.md  README_UI.md  pyproject.toml
.streamlit/: config.toml
00-overview/: 01-one-pager.md  02-scope-and-boundary.md  03-user-flows.md
01-core/: 02-repo-structure.md  03-minimal-extension-rules.md
02-data/: 01-data-provider-contract.md  README.md
03-dsl/: 01-dsl-overview.md  02-timeseries-strategy-spec.md  04-validation-assumptions-warnings.md  README.md
04-parser/: 02-llm-api-contract.md  03-prompt-and-output-policy.md
05-engine/: 02-execution-and-a-share-rules.md  03-portfolio-metrics-and-report.md  04-qlib-evaluation-adapter.md  README.md
06-app/: README.md
07-testing-delivery/: 01-golden-cases.md  README.md
NaturalLanguageTrader/: FILE-INDEX.md  START-HERE-FOR-CODEX.md
NaturalLanguageTrader/00-overview/: README.md
NaturalLanguageTrader/01-core/: 01-core-abstractions.md  README.md
NaturalLanguageTrader/02-data/: 02-qlib-data-plan.md  03-capabilities-and-fallbacks.md  (+1 more)
app/: streamlit_app.py  style.py  ui_components.py
src/: __init__.py  compiler.py  config.py  data_provider.py  dsl.py  indicators.py  models.py  parser.py  pipeline.py  qlib_evaluator.py  qlib_provider.py  qlib_strategy_adapter.py  report.py  symbols.py
tests/: test_compiler.py  test_config.py  test_dsl.py  test_golden_cases.py  test_indicators.py  test_parser.py  test_parser_integration.py  test_qlib_cross_sectional.py  test_qlib_provider.py  test_qlib_single_asset.py  test_symbols.py
(+10 files in other folders)
