[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nltrader"
version = "0.1.0"
description = "Contract-first backend skeleton for NLTrader."
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5,<2",
    "pydantic>=2.12,<3",
    "pyqlib>=0.9.7,<0.10",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
